Add TSDBAggregator
Signed-off-by: Wenting Wang <wenting.wang@uber.com>

add cache checks

Signed-off-by: Wenting Wang <wenting.wang@uber.com>

fix integrationTest

Signed-off-by: Wenting Wang <wenting.wang@uber.com>